# snake-silo

./: .env.example  .gitignore  .gitmodules  README.md  foundry.toml  pyproject.toml  remappings.txt
.github/workflows/: ci.yml
contracts/: ShareCollateralToken.vy  ShareDebtToken.vy  Silo.vy  SiloRepository.vy
src/: ShareCollateralToken.vy  ShareDebtToken.vy  ShareToken.vy  Silo.vy  TokensFactory.vy
test/: Deposit.t.sol  SnakeSiloTest.sol
tests/: conftest.py  simple_test.py
tests/contracts/: MockERC20.vy
