[tool.poetry]
name = "snake-silo"
version = "0.1.0"
description = ""
authors = ["Alberto <albicento.ac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
titanoboa = { git = "https://github.com/vyperlang/titanoboa.git", rev = "71f25eb95bb8a97cd2b2949ab2c62becd9c5ba00" }
pytest = "^7.4.0"
hypothesis = "^6.98.4"
coverage = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
